Renamed menu items for better understanding of functionality

--- a/ProxysqlAdminUi.Web/Components/Layout/MainLayout.razor
+++ b/ProxysqlAdminUi.Web/Components/Layout/MainLayout.razor
@@ -8,8 +8,8 @@
     <RadzenHeader>
         <RadzenMenu>
             <RadzenMenuItem Text="Home" Icon="home" Path="/" />
-            <RadzenMenuItem Text="Users" Icon="account_box" Path="/mysql/users" />
-            <RadzenMenuItem Text="Servers" Icon="dns" Path="/mysql/servers" />
+            <RadzenMenuItem Text="Mysql Users" Icon="account_box" Path="/mysql/users" />
+            <RadzenMenuItem Text="Mysql Servers" Icon="dns" Path="/mysql/servers" />
             <RadzenMenuItem Text="Rules" Icon="quiz" Path="/mysql/rules" />
             <RadzenMenuItem Text="Query Digest" Icon="query_stats" Path="/mysql/queries/digest" />
             <RadzenMenuItem Text="Global Variables" Icon="settings" Path="/proxysql/global-variables" />
