Improved naming consistency for the models & viewmodels

--- a/ProxysqlAdminUi.Web/Components/Pages/Home.razor
+++ b/ProxysqlAdminUi.Web/Components/Pages/Home.razor
@@ -206,7 +206,7 @@
     private long _totalQueries;
     private long _cachedQueries;
     private long _uncachedQueries;
-    private ServerStatusSummary _serverStatus = new();
+    private ServerStatusSummaryViewModel _serverStatus = new();
     private Dictionary<string, string> _globalStats = new();
     private Dictionary<string, long> _memoryMetrics = new();
 
